@@ -1,3 +1,7 @@
+2014-11-03  Akira Kakuto  <kakuto@fuk.kinidai.ac.jp>
+
+	* texmfmp.c: Indentation.
+
 2014-10-30  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* texmfmp.c: Use the decision about tex*.dll from ../texmfmp.h.
